<resources>
    <string name="app_name">GadingReport2017</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string><![CDATA[
    g>
    ]]>
    <string name="username">Email</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>


    <string name="btn_logout_from_google">Logout</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_upload_with_maps">Map</string>
    <string name="title_activity_maps">Map</string>


</resources>
