<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"/>
    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>
    <TextView
        android:id="@+id/lblfname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fname"/>
    <EditText
        android:id="@+id/txtfname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fname"/>
    <TextView
        android:id="@+id/lbllname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lname"/>
    <EditText
        android:id="@+id/txtlname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lname"/>
    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>
    <TextView
        android:id="@+id/lblPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/txtPassword1"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
</LinearLayout>